--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: demo-deploy
+  name: k8s-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: demo
+      app: k8s-app
   template:
     metadata:
       labels:
-        app: demo
+        app: k8s-app
     spec:
       containers:
-      - name: demo-container
-        image: IMAGE_TO_BE_REPLACED
+      - name: k8s-container
+        image: IMAGE
         ports:
         - containerPort: 80
