--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,18 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-deploy
+  labels:
+    app: demo-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: demo
+      app: demo-app
   template:
     metadata:
       labels:
-        app: demo
+        app: demo-app
     spec:
       containers:
-      - name: demo-container
-        image: IMAGE_TO_BE_REPLACED
-        ports:
-        - containerPort: 80
+        - name: demo-app
+          image: IMAGE
+          ports:
+            - containerPort: 80
